Sua api cho phan tao phieu tu van thuoc